--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Control_ShiftRegister_74XX595
+name=74XX595
 version=1.5.1
 author=Bruno Pescarolli
 maintainer=Bruno Pescarolli <bruno.pescarolli@gmail.com>
